Increase pipeline timeout

--- a/azure-pipelines-pr.yml
+++ b/azure-pipelines-pr.yml
@@ -18,6 +18,7 @@ pool: '1ES-Host-Ubuntu'
 
 jobs:
   - job: BuildTestLint
+    timeoutInMinutes: 120
     workspace:
       clean: all
     steps:
@@ -25,6 +26,7 @@ jobs:
 
   - job: DeployE2E
     displayName: Deploy and E2E
+    timeoutInMinutes: 120
     workspace:
       clean: all
     steps:
