--- a/packages/react-components/react-list-preview/package.json
+++ b/packages/react-components/react-list-preview/package.json
@@ -31,11 +31,13 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
-    "@fluentui/react-jsx-runtime": "^9.0.3",
-    "@fluentui/react-theme": "^9.1.11",
-    "@fluentui/react-tabster": "^9.12.5",
-    "@fluentui/react-utilities": "^9.13.0",
     "@fluentui/react-button": "^9.3.34",
+    "@fluentui/react-checkbox": "^9.1.35",
+    "@fluentui/react-context-selector": "^9.1.31",
+    "@fluentui/react-jsx-runtime": "^9.0.3",
+    "@fluentui/react-tabster": "^9.12.5",
+    "@fluentui/react-theme": "^9.1.11",
+    "@fluentui/react-utilities": "^9.13.0",
     "@griffel/react": "^1.5.14",
     "@swc/helpers": "^0.5.1"
   },
